--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -1,18 +1,18 @@
 @let online = online$ | async;
 
-<div class="flex justify-between px-4 sm:px-0">
-    <div class="mt-8 z-10 flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
+<div class="flex justify-center sm:justify-between px-4 sm:px-0">
+    <div class="hidden mt-8 z-10 sm:flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
         <div class="rounded-2xl gap-4 flex items-center p-4 sm:py-3 sm:pl-3 sm:pr-4">
             <img src="/images/logo.png" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14 cursor-pointer"/>
-            <p class="hidden sm:block text-2xl sm:text-5xl text-white cursor-pointer font-[500] text-nowrap">Last Hearth</p>
+            <p [ngClass]="{'!hidden 2xl:!block': userService.authState}" class="hidden sm:block text-2xl sm:text-5xl text-white cursor-pointer font-[500] text-nowrap">Last Hearth</p>
         </div>
     </div>
 
-    <div class="flex gap-4 items-center">
+    <div class="flex gap-2 sm:gap-4 items-center">
         @if(userService.authState) {
             <div class="mt-8 z-10 flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
-                <div class="rounded-2xl gap-1 pl-3.5 pr-3 flex items-center">
-                    <p class="text-2xl text-white">{{userService.userName}}</p>
+                <div class="rounded-2xl gap-1 px-1 sm:px-3 flex items-center">
+                    <p class="text-sm sm:text-2xl text-white">{{userService.userName}}</p>
                     @if(userService.userImage){
                         <img [src]="userService.userImage" class="relative ml-2 rounded-lg z-10 h-12 w-12 sm:h-18 sm:w-18 cursor-pointer border-neutral-300 border-2"/>
                     }@else {
