--- a/last-hearth-landing/src/styles.css
+++ b/last-hearth-landing/src/styles.css
@@ -12,10 +12,10 @@ html body {
 }
 
 a {
-    text-decoration-line: underline;
+    /* text-decoration-line: underline;
     text-decoration-style: dashed;
     text-decoration-thickness: 1px;
-    text-underline-offset: 6px;
+    text-underline-offset: 6px; */
     cursor: pointer;
 }
 
