--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -4,23 +4,11 @@
     <div class="hidden mt-8 z-10 sm:flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
         <div class="rounded-2xl gap-4 flex items-center p-4 sm:py-3 sm:pl-3 sm:pr-4">
             <img src="/images/logo.png" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14 cursor-pointer"/>
-            <p [ngClass]="{'!hidden 2xl:!block': userService.authState}" class="hidden sm:block text-2xl sm:text-5xl text-white cursor-pointer font-[500] text-nowrap">Last Hearth</p>
+            <p [ngClass]="{'!hidden 2xl:!block': userService.isAuthorize()}" class="hidden sm:block text-2xl sm:text-5xl text-white cursor-pointer font-[500] text-nowrap">Last Hearth</p>
         </div>
     </div>
 
     <div class="flex gap-2 sm:gap-4 items-center">
-        @if(userService.authState) {
-            <div class="mt-8 z-10 flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
-                <div class="rounded-2xl gap-1 px-1 sm:px-3 flex items-center">
-                    <p class="text-sm sm:text-2xl text-white">{{userService.userName}}</p>
-                    @if(userService.userImage){
-                        <img [src]="userService.userImage" class="relative ml-2 rounded-lg z-10 h-12 w-12 sm:h-18 sm:w-18 cursor-pointer border-neutral-300 border-2"/>
-                    }@else {
-                        <tui-icon icon="@tui.square-user-round" class="relative rounded-lg z-10 cursor-pointer !text-6xl text-white"/>
-                    }
-                </div>
-            </div>
-        }
         <div class="mt-8 z-10 pt-3 flex h-[4.5rem] sm:h-[5rem] flex-col gap-1 sm:gap-3 w-fit items-end justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
             <div class="flex w-full px-4 gap-4 justify-center items-center">
                 <div class="flex gap-0.5 items-center">
@@ -34,12 +22,24 @@
                 </div>
             </div>
             <progress
-                max="50"
+                [max]="online?.max"
                 size="s"
                 tuiProgressBar
-                [value]="online"
+                [value]="online?.count"
                 class="progress "
             ></progress>
         </div>
+        @if(userService.isAuthorize()) {
+            <div class="mt-8 z-10 flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]">
+                <div class="rounded-2xl gap-1 px-1 sm:px-3 flex items-center">
+                    <p class="text-sm sm:text-2xl text-white">{{userService.userName}}</p>
+                    @if(userService.userImage){
+                        <img [src]="userService.userImage" class="relative ml-2 rounded-lg z-10 h-12 w-12 sm:h-18 sm:w-18 border-neutral-300 border-2"/>
+                    }@else {
+                        <tui-icon icon="@tui.square-user-round" class="relative rounded-lg z-10 !text-6xl text-white"/>
+                    }
+                </div>
+            </div>
+        }
     </div>
 </div>
