--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -1,18 +1,12 @@
 <div class="relative">
-    <tui-carousel
-    [(index)]="carouselIndex" [duration]="3000"
-    class="size-full">
+    <tui-carousel [(index)]="carouselIndex" [duration]="3000" class="size-full">
         @for (item of images; track $index) {
-            <img
-                *tuiItem
-                [src]="item"
-                class="h-[500px] object-cover object-center"
-            />
+        <img *tuiItem [src]="item" class="h-[500px] object-cover object-center" />
         }
     </tui-carousel>
 </div>
-<div class="flex flex-col gap-7 px-10 py-10">
+<div class="flex flex-wrap items-center gap-7 px-10 py-10">
     @for (item of news; track $index; let first = $first) {
-        <app-news-card [ngClass]="{'-mt-6' : first}" [news]="item"></app-news-card>
+    <app-news-card [news]="item" class="!h-auto lg:!h-[280px]"></app-news-card>
     }
 </div>
