--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -7,10 +7,10 @@
             <div class="flex gap-2 justify-center md:justify-between md:gap-4 w-full mb-4">
                 <div class="flex gap-2">
                     <a
-                    (click)="select = 'home'"
-                    class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5"
-                    [routerLink]="['/home']"
-                    [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'home' }"
+                        (click)="select = 'home'"
+                        class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5"
+                        [routerLink]="['/home']"
+                        [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'home' }"
                     >
                         <tui-icon icon="@tui.house" />
                     </a>
@@ -29,15 +29,24 @@
                         РЫНОК
                     </button>
                 </div>
-                    <button
-                        tuiIconButton
-                        (click)="userService.isAuthorize() ? '' : signIn()"
-                        [routerLink]="userService.isAuthorize() ? ['/profile'] : ''"
-                        [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'profile' }"
-                        class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5"
+                    <div class="flex flex-row gap-2">
+                        <button
+                            (click)="userService.isAuthorize() ? '' : signIn()"
+                            [routerLink]="userService.isAuthorize() ? ['/profile'] : ''"
+                            [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'profile' }"
+                            class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
                     >
                         <tui-icon [icon]="userService.isAuthorize() ? '@tui.user' : '@tui.log-in'"/>
                     </button>
+                    <button
+                        [routerLink]="isAdmin() ? ['/admin'] : ''"
+                        [class.!hidden]="!isAdmin()"
+                        [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'admin' }"
+                        class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
+                    >
+                        <tui-icon icon="@tui.shield"/>
+                    </button>
+                    </div>
             </div>
 
             <div class="flex size-full justify-center gap-3 mb-10">
