feature: Обновление правил. Доработка личного кабинета.

--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -21,22 +21,22 @@
                     >
                         ПРАВИЛА
                     </button>
-                    <button
+                    <!-- <button
                         [routerLink]="['/market']"
                         class="nav-button md:min-w-20 text-white md:tracking-wider font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
                         [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'market' }"
                     >
                         РЫНОК
-                    </button>
+                    </button> -->
                 </div>
-                    <div class="flex flex-row gap-2">
-                        <button
-                            (click)="userService.isAuthorize() ? '' : signIn()"
-                            [routerLink]="userService.isAuthorize() ? ['/profile'] : ''"
-                            [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'profile' }"
-                            class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
+                <div class="flex flex-row gap-2">
+                    <button
+                        (click)="userService.isAuthorize() ? '' : signIn()"
+                        [routerLink]="userService.isAuthorize() ? ['/profile'] : ''"
+                        [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'profile' }"
+                        class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
                     >
-                        <tui-icon [icon]="userService.isAuthorize() ? '@tui.user' : '@tui.log-in'"/>
+                        <tui-icon [icon]="userService.isAuthorize() ? '@tui.user' : '@tui.log-in'" />
                     </button>
                     <button
                         [routerLink]="isAdmin() ? ['/admin'] : ''"
@@ -44,9 +44,9 @@
                         [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'admin' }"
                         class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
                     >
-                        <tui-icon icon="@tui.shield"/>
+                        <tui-icon icon="@tui.shield" />
                     </button>
-                    </div>
+                </div>
             </div>
 
             <div class="flex size-full justify-center gap-3 mb-10">
