--- a/last-hearth-landing/src/app/profile/statistics/statistics.component.less
+++ b/last-hearth-landing/src/app/profile/statistics/statistics.component.less
@@ -1,14 +1,17 @@
+:host {
+    display: block;
+    width: 100%;
+}
+
 [tuiTh],
 [tuiTd] {
     border-inline-start: none;
     border-inline-end: none;
     background-color: transparent !important;
     overflow: hidden !important;
-
 }
 
-[tuiTable][data-size='s'] [tuiTitle] {
+[tuiTable][data-size="s"] [tuiTitle] {
     flex-direction: row;
     gap: 0.375rem;
 }
-
