--- a/last-hearth-landing/src/styles.css
+++ b/last-hearth-landing/src/styles.css
@@ -21,7 +21,7 @@ a {
 
 .old-paper-background {
     background-color: #e8dfc8;
-    background-image: url('/old-paper.jpg'), radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 80%);
+    background-image: url("/old-paper.jpg"), radial-gradient(circle, rgba(255, 255, 255, 0.1) 20%, transparent 80%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -29,7 +29,7 @@ a {
 }
 
 .progress {
-    &[data-size='s'] {
+    &[data-size="s"] {
         color: #e2d7bb;
     }
 }
@@ -37,7 +37,7 @@ a {
 tui-dialog {
     .t-content {
         background-color: #e2d7bb !important;
-        background-image: url('/image_1.png') !important;
+        background-image: url("/image_1.png") !important;
         background-repeat: repeat !important;
     }
 }
