--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -7,3 +7,4 @@
     • В момент появления на сервере необходимо ввести ваш КОД ДЛЯ АВТОРИЗАЦИИ, который находится у вас в профиле
     командой: <b>/verify ВАШ_КОД</b>
 </p>
+<p class="text-2xl break-words">• Персонажа можно настроить потом, введя команду: <b>.charsel</b></p>
