--- a/last-hearth-landing/src/app/profile/profile.component.html
+++ b/last-hearth-landing/src/app/profile/profile.component.html
@@ -17,7 +17,7 @@
             <p class="text-4xl">{{userData.name}}</p>
             <p [class.!text-red-500]="getRoleName() === 'Неверифицирован'" class="text-2xl">{{getRoleName()}}</p>
             @let code = code$ | async; @let status = status$ | async;
-            <p *ngIf="status?.status === 'approved'" class="text-2xl">
+            <p *ngIf="status?.status === 'approved' || status?.status === 'verified'" class="text-2xl">
                 Ваш код для авторизации в игре: <b>{{code?.code}}</b>
             </p>
             <button
