--- a/last-hearth-landing/src/app/profile/profile.component.html
+++ b/last-hearth-landing/src/app/profile/profile.component.html
@@ -16,12 +16,16 @@
         <div class="flex flex-col gap-2">
             <p class="text-4xl">{{userData.name}}</p>
             <p [class.!text-red-500]="getRoleName() === 'Неверифицирован'" class="text-2xl">{{getRoleName()}}</p>
-            @let code = code$ | async; @let status = status$ | async;
-            <p *ngIf="status?.status === 'approved' || status?.status === 'verified'" class="text-2xl">
+            @let code = code$ | async; @let details = details$ | async;
+            <p *ngIf="details?.status === 'approved' || details?.status === 'verified'" class="text-2xl">
                 Ваш код для авторизации в игре: <b>{{code?.code}}</b>
             </p>
+            <p *ngIf="details?.status === 'pending'" class="text-2xl">Ваша анкета отправлена. Ожидайте проверки.</p>
+            <p *ngIf="details?.status === 'rejected'" class="text-2xl">
+                Вашу анкету отклонили. Причина: {{details?.rejection_reason}}
+            </p>
             <button
-                *ngIf="getRoleName() === 'Неверифицирован'"
+                *ngIf="details?.status == 'rejected' || !details"
                 (click)="verification()"
                 class="md:min-w-20 hover:opacity-80 transition-all duration-300 text-white md:tracking-wider font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
             >
