fix: рефактор компонентов подтверждения и админ страницы

--- a/last-hearth-landing/src/app/confirm-approve/confirm-approve.component.html
+++ b/last-hearth-landing/src/app/confirm-approve/confirm-approve.component.html
@@ -8,7 +8,7 @@
             ЕЩЕ ПОДУМАТЬ
         </button>
         <button
-            (click)="approve()"
+            (click)="confirmApprove()"
             class="text-white text-sm font-bold cursor-pointer mt-2 self-end bg-green-600 rounded-lg py-2.5 px-4 hover:bg-green-700 active:bg-green-400"
         >
             ОДОБРИТЬ
