--- a/last-hearth-landing/src/app/admin/admin.component.html
+++ b/last-hearth-landing/src/app/admin/admin.component.html
@@ -9,7 +9,7 @@
     </button>
 
     <div class="mt-8 flex flex-col gap-4">
-        <p class="text-2xl">Анкеты на рассмотрении:</p>
+        <p class="text-2xl">{{veriverificationRequests === null || veriverificationRequests?.length === 0 ? 'Анкеты отсутствуют' : 'Анкеты на рассмотрении:'}}</p>
         @for (item of veriverificationRequests; track $index) { <app-verify-request [data]="item" /> }
     </div>
 </div>
