--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -5,7 +5,7 @@
         class="hidden mt-8 z-10 sm:flex w-fit h-[4.5rem] sm:h-[5rem] items-center justify-start rounded-lg backdrop-blur-md bg-lh-primary-2/50 shadow-[0_4px_30px_rgba(0,0,0,0.1)]"
     >
         <div class="rounded-2xl gap-4 flex items-center p-4 sm:py-3 sm:pl-3 sm:pr-4">
-            <img src="/images/logo.png" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14" />
+            <img src="/images/logo.png" alt="Логотип сервера" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14" />
             <p
                 [ngClass]="{'!hidden 2xl:!block': userService.isAuthorize()}"
                 class="hidden sm:block text-2xl sm:text-5xl text-white font-[500] text-nowrap"
@@ -41,6 +41,7 @@
                 @if(userService.userImage){
                 <img
                     [src]="userService.userImage"
+                    alt = "Аватар пользователя"
                     class="relative ml-2 rounded-lg z-10 h-12 w-12 sm:h-18 sm:w-18 border-neutral-300 border-2"
                 />
                 }@else {
