--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <div class="pt-0 lg:pt-8 flex flex-col justify-center items-center lg:gap-8">
-    <app-header class="w-full mb-8 lg:w-[60%]" />
+    <app-header class="w-full mb-8 lg:w-[50%]" />
 
-    <div class="h-auto w-full lg:w-[60%] flex">
+    <div class="h-auto w-full lg:w-[50%] flex">
         <div class="flex flex-col items-center w-full">
             <!-- Блок навигации -->
             <div class="flex gap-2 justify-center md:justify-between md:gap-4 w-full mb-4">
@@ -15,8 +15,16 @@
                         <tui-icon icon="@tui.house" />
                     </a>
                     <button
+                        [routerLink]="['/start-game']"
+                        class="nav-button md:min-w-20 text-white flex items-center gap-2 font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                        [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'startGame' }"
+                    >
+                        <tui-icon icon="@tui.gamepad-2" />
+                        НАЧАТЬ ИГРУ
+                    </button>
+                    <button
                         [routerLink]="['/rules']"
-                        class="nav-button md:min-w-20 text-white md:tracking-wider font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
+                        class="nav-button md:min-w-20 text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4"
                         [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'rules' }"
                     >
                         ПРАВИЛА
@@ -30,14 +38,6 @@
                         class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
                     >
                         <tui-icon [icon]="userService.isAuthorize() ? '@tui.user' : '@tui.log-in'" />
-                    </button>
-                    <button
-                        [routerLink]="isAdmin() ? ['/admin'] : ''"
-                        [class.!hidden]="!isAdmin()"
-                        [ngClass]="{ '!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'admin' }"
-                        class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5 !w-11"
-                    >
-                        <tui-icon icon="@tui.shield" />
                     </button>
                 </div>
             </div>
