--- a/last-hearth-landing/src/app/profile/how-play/how-play.component.html
+++ b/last-hearth-landing/src/app/profile/how-play/how-play.component.html
@@ -1,10 +1,66 @@
-<p class="text-2xl break-words">Для того, чтобы попасть на сервер необходимо:</p>
-<p class="text-2xl break-words">• Скачать Vintage Story версией 1.20.9</p>
-<p class="text-2xl break-words">• Внутри игры добавить новый сервер</p>
-<p class="text-2xl break-words">• Ввести ip сервера: <b>85.28.47.225</b></p>
-<p class="text-2xl break-words">• Ввести пароль сервера: <b>Kexibqcthdthdvbht!!##17ONLYLAST</b></p>
-<p class="text-2xl break-words">
-    • В момент появления на сервере необходимо ввести ваш КОД ДЛЯ АВТОРИЗАЦИИ, который находится у вас в профиле
-    командой: <b>/verify ВАШ_КОД</b>
-</p>
-<p class="text-2xl break-words">• Персонажа можно настроить потом, введя команду: <b>.charsel</b></p>
+<div class="flex flex-col gap-8">
+    <div class="flex gap-8 items-start">
+        <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">1</p>
+        <div class="flex flex-col gap-1">
+            <p class="text-lh-primary text-2xl font-bold">Скачайте игру</p>
+            <p class="text-lh-primary text-base">
+                Приобрести игру можно на
+                <a
+                    class="text-blue-400 font-bold border-dashed border-b"
+                    href="https://www.vintagestory.at/store/category/1-game-account-game-servers/"
+                    target="_blank"
+                >
+                    официальном сайте
+                </a>
+                (рекомендуется) или временно попробовать на
+                <a class="text-blue-400 font-bold border-dashed border-b" href="https://fplay.su/" target="_blank">
+                    fplay.su
+                </a>
+                (рекомендуем приобрести лицензию)
+            </p>
+        </div>
+    </div>
+
+    <div class="flex gap-8 items-start">
+        <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">2</p>
+        <div class="flex flex-col gap-1">
+            <p class="text-lh-primary text-2xl font-bold">Добавьте наш сервер</p>
+            <p class="text-lh-primary text-base">
+                Во вкладке сетевая игра добавьте наш сервер используя: <br />IP: <b>85.28.47.225</b><br />Пароль:
+                <b>Kexibqcthdthdvbht!!##17ONLYLAST</b>.
+            </p>
+        </div>
+    </div>
+
+    <div class="flex gap-8 items-start">
+        <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">3</p>
+        <div class="flex flex-col gap-1">
+            <p class="text-lh-primary text-2xl font-bold">Подтвердите аккаунт</p>
+            <p class="text-lh-primary text-base">
+                При первом заходе у вас есть 10 минут на то, что бы прописать команду <b>/verify ВАШ_КОД</b>. Код
+                находится около вашего профиля.<br />Не тратьте время на создание персонажа и выбор класса, нажмите
+                escape. Настроить персонажа можно будет после верификации и повторного подключения на сервер.
+            </p>
+        </div>
+    </div>
+
+    <div class="flex gap-8 items-start">
+        <p class="text-8xl font-extrabold text-[#bdb093] min-w-12 leading-20">4</p>
+        <div class="flex flex-col gap-1">
+            <p class="text-lh-primary text-2xl font-bold">Играйте</p>
+            <p class="text-lh-primary text-base">
+                Выполнив все шаги - вы можете приступить к полноценной игре. Если у вас возникнут какие-либо сложности,
+                вы всегда можете попросить помощи у других игроков или у администрации. Узнать свой ответ быстро можно у
+                нас в
+                <a
+                    class="text-blue-400 font-bold border-dashed border-b"
+                    href="https://discord.gg/FZb7SGrSFy"
+                    target="_blank"
+                >
+                    discord
+                </a>
+                .
+            </p>
+        </div>
+    </div>
+</div>
